1.21.1-OpFix: full local snapshot based on 1.21.1 (security hardening, instant-kill sword, version gating, lite build, rainbow effects, lore)